--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 binrw = "0.13.3"
 dotenvy = "0.15.7"
 env_logger = "0.11.3"
-itertools = "0.12.1"
+itertools = "0.13.0"
 log = { version = "0.4.21", features = ["std"] }
-nalgebra = "0.32.5"
+nalgebra = { version = "0.32.5", features = ["serde-serialize"]}
 rand = "0.8.5"
 rayon = "1.10.0"
+serde = { version = "1.0.202", features = ["derive"] }
+serde_json = "1.0.117"
